2010-08-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs.c (emacs_copyright, emacs_version): Make static.
	(Vinitial_window_system, Vauto_save_list_file_name)
	(Vinhibit_redisplay): Remove declarations.
	(main): Remove HAVE_SHM code, unused.  Remove _I386 conditional
	for AIX.

	Use const for some arrays and functions.
	* xterm.h (xg_set_icon_from_xpm_data):
	* xfns.c (xg_set_icon_from_xpm_data):
	* term.c (fkeys):
	* keyboard.c (lispy_accent_keys, lispy_function_keys)
	(lispy_multimedia_keys, lispy_kana_keys, iso_lispy_function_keys)
	(lispy_drag_n_drop_names, scroll_bar_parts, modify_event_symbol)
	(frame.c frame_parms):
	* emacs-icon.h (gnu_xpm_bits):
	* callint.c (callint_argfuns): Use const.

2010-08-06  Jan Djärv  <jan.h.d@swipnet.se>

	* sysdep.c: Move include term.h last of includes (Bug#6812).

2010-08-06  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (realloc_glyph_pool): Zero out newly allocated glyphs.

	* msdos.c (IT_display_cursor): Log cursor position on termscript.

	* .gdbinit (pgx): Display the avoid_cursor_p flag.

2010-08-06  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in ($(BLD)/xdisp.$(O)): Update dependencies.

2010-08-06  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.h (x_get_focus_frame): Declare.

	* keyboard.h (poll_for_input_1): Unconditionally declare.

	* nsterm.h (x_set_menu_bar_lines): Declare.

	* window.c: Don't include menu.h, it depends on lots of other .h-files.

	* xfaces.c (x_create_gc, x_free_gc): Convert to ANSI C prototypes.

	* window.c: Include menu.h.

	* unexmacosx.c (print_region_list, print_regions)
	(build_region_list, find_emacs_zone_regions)
	(unexec_regions_merge, read_load_commands, dump_it)
	(unexec_init_emacs_zone): Convert to ANSI C prototypes.

	* term.c: Check HAVE_SYS_IOCTL_H.

	* sysdep.c: Check HAVE_TERM_H.

	* process.c: Check HAVE_UTIL_H.  Include nsterm.h if HAVE_NS.

	* nsterm.m (ns_init_paths, ns_alloc_autorelease_pool)
	(ns_ring_bell, ns_defined_color, hide_hourglass)